--- a/TypeScript/index.html
+++ b/TypeScript/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <script src="js/code.js"></script>
+    <h1 id="header">IBM</h1>
+    <button onclick= abc()> click</button>
     
 </body>
 </html>
